# langgraph-telegram

./: .env.example  .gitignore  README.md  TODO.md  debug_channel.py  find_channel.py  get_chat_id.py  pyproject.toml  test_bot.py  test_channel_formats.py  test_mcp_client.py  test_processing.py  test_qwen_only.py  test_telegram_only.py
src/: __init__.py  main.py  qwen_client.py  qwen_langchain.py  telegram_mcp.py  telegram_mcp_client.py  telegram_mock.py  workflow.py
